--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,36 @@ img {
 .user__info > small {
   color: #666;
 }
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid gray;
+  border-right: none;
+  padding: 5px;
+  height: 40px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: black;
+}
+
+.searchButton {
+  width: 40px;
+  height: 40px;
+  border: 1px solid gray;
+  background: #888;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.searchTerm:focus{
+  color: black;
+}
